feat: Update application name to Gestão KFB
Updates the application name from "BetManager Pro" to "Gestão KFB" across the UI and metadata. Also includes minor refactors and cleanups in components for clarity and to remove commented-out or deprecated logic.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BetManager Pro</title>
+    <title>Gestão KFB</title>
     <!-- Tailwind CSS CDN Fallback for Preview Environments -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="importmap">
